[development] Auto commit on 2026-07-30 15:47:24 | Files: account-online-springboot/src/main/java/com/internal/shared/component/AuditComponent.java account-online-springboot/src/main/java/com/internal/shared/constant/HelperUtils.java account-online-springboot/src/main/java/com/internal/shared/security/JWTGenerator.java account-online-springboot/uploads/customer-image/nid/2026-07-W31/nid_250279931_20260730142130864_bc4699.jpg account-online-springboot/uploads/customer-image/selfie/2026-07-W31/selfie_250279931_20260730142130864_7846ff.jpg account-online-springboot/uploads/junior/document/2026-07-W31/ref_doc_010890226.png account-online-springboot/uploads/junior/document/2026-07-W31/ref_doc_011045892.jpg account-online-springboot/uploads/junior/document/2026-07-W31/ref_doc_030702309.pdf account-online-springboot/uploads/junior/document/2026-07-W31/ref_doc_JNR-1785385975996.pdf account-online-springboot/uploads/junior/nid/2026-07-W31/nid_010876574_20260730132357083_d5027e.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_011469971_20260730133449111_430242.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_011469971_20260730144250569_4746d8.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_101386484_20260730153644211_4c723e.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_101386484_20260730153657991_106cbf.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_101386484_20260730153702793_3a5e2f.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_101386484_20260730153705999_322935.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_101386484_20260730153710445_e9da67.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_101386484_20260730153712809_85b171.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_160276901_20260730134134872_0ce753.jpg account-online-springboot/uploads/junior/nid/2026-07-W31/nid_160276901_20260730134145934_f78b9d.jpg account-onlin