@@ -2,8 +2,10 @@ package com.internal.shared.security;
 
 import com.internal.config.JwtProperties;
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
@@ -15,20 +17,16 @@ import java.security.Key;
 import java.util.Collection;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Enhanced JWT Generator with improved role handling and token management.
  */
 @Component
+@RequiredArgsConstructor
 @Slf4j
 public class JWTGenerator {
 
     private final JwtProperties jwtProperties;
-
-    public JWTGenerator(JwtProperties jwtProperties) {
-        this.jwtProperties = jwtProperties;
-    }
 
     private Key getSigningKey() {
         return new SecretKeySpec(jwtProperties.getSecret().getKey().getBytes(), SignatureAlgorithm.HS512.getJcaName());
@@ -38,11 +36,10 @@ public class JWTGenerator {
         UserDetails userDetails = (UserDetails) authentication.getPrincipal();
         String username = userDetails.getUsername();
 
-        // Get authorities/roles
         Collection<? extends GrantedAuthority> authorities = userDetails.getAuthorities();
         List<String> roles = authorities.stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         Date currentDate = new Date();
         long expirationTimeInMs = jwtProperties.getExpirationMin() * 60 * 1000;
@@ -76,51 +73,31 @@ public class JWTGenerator {
                 .compact();
     }
 
-    /**
-     * Extract username from JWT token.
-     * @param token JWT token
-     * @return Username from token
-     */
     public String getUsernameFromJWT(String token) {
         Claims claims = parseToken(token);
         return claims.getSubject();
     }
 
-    /**
-     * Extract roles from JWT token.
-     * @param token JWT token
-     * @return List of roles
-     */
     @SuppressWarnings("unchecked")
     public List<String> getRolesFromJWT(String token) {
         Claims claims = parseToken(token);
         return (List<String>) claims.get("roles");
     }
 
-    /**
-     * Get time remaining until token expiration in seconds.
-     * @param token JWT token
-     * @return Seconds until expiration, or 0 if expired
-     */
     public long getTokenExpirationTime(String token) {
         Claims claims = parseToken(token);
         Date expiration = claims.getExpiration();
         Date now = new Date();
 
         long diff = expiration.getTime() - now.getTime();
-        return Math.max(0, diff / 1000); // Convert to seconds, minimum 0
+        return Math.max(0, diff / 1000);
     }
 
-    /**
-     * Validate a JWT token.
-     * @param token JWT token
-     * @return true if valid, exception if invalid
-     */
     public boolean validateToken(String token) {
         try {
             parseToken(token);
             return true;
-        } catch (io.jsonwebtoken.ExpiredJwtException ex) {
+        } catch (ExpiredJwtException ex) {
             log.debug("JWT token expired: {}", ex.getMessage());
             return false;
         } catch (Exception ex) {
@@ -129,11 +106,6 @@ public class JWTGenerator {
         }
     }
 
-    /**
-     * Parse JWT token and extract claims.
-     * @param token JWT token
-     * @return Claims from token
-     */
     private Claims parseToken(String token) {
         return Jwts.parserBuilder()
                 .setSigningKey(getSigningKey())
